Dark mode colors fixed -Landing

--- a/public/_landing.scss
+++ b/public/_landing.scss
@@ -27,7 +27,9 @@
         border-radius: 100% 100% 100% 100%;
         z-index: 1;
         box-shadow: 5px 5px 13px rgba(126, 126, 126, 0.77),
-        inset -5px -5px 25px #00000062;
+    inset -5px -5px 25px #00000062;
+        
+       
       }
     }
     .name {
@@ -100,5 +102,13 @@
         height: unset;
       }
     }
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .main .wrapper  .landing .section:before {
+    
+    box-shadow: 5px 5px 13px rgba(0, 0, 0, 0.575),
+        inset -5px -5px 25px #1f1f1fa2;
   }
 }
